quartz/styles/custom.scss
@use "./base.scss";

// put your custom CSS here!

@font-face {
  font-family: "Anthropic Serif";
  src: url("https://1816033108.v.123pan.cn/1816033108/cdn/AnthropicSerif.woff2") format("woff2");
  font-weight: 300 800;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Anthropic Serif";
  src: url("https://1816033108.v.123pan.cn/1816033108/cdn/AnthropicSerifItalic.woff2") format("woff2");
  font-weight: 300 800;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Noto Serif CJK SC";
  font-weight: 400;
  font-style: normal;
  src: url("https://1816033108.v.123pan.cn/1816033108/cdn/NotoSerifCJKsc-Regular.woff2") format("woff2");
  font-display: swap;
}


@font-face {
  font-family: "Maple Mono";
  font-weight: 400;
  font-style: normal;
  src: url("https://1816033108.v.123pan.cn/1816033108/cdn/MapleMono.woff2") format("woff2");
}

@font-face {
  font-family: "Maple Mono";
  font-weight: 400;
  font-style: italic;
  src: url("https://1816033108.v.123pan.cn/1816033108/cdn/MapleMonoItalic.woff2") format("woff2");
}

:root {
  --bodyFont: "Anthropic Serif", "Noto Serif CJK SC", serif !important;
  --headerFont: "Anthropic Serif", "Noto Serif CJK SC", serif !important;
  --titleFont: "Anthropic Serif", "Noto Serif CJK SC", serif !important;
  --codeFont: "Maple Mono", "Noto Serif CJK SC", monospace !important;
  --highlight: rgba(217, 119, 87, 0.2);
  --light: hsl(48, 33.3%, 97.1%);
}

.katex, .math {
  font-size: 1.1em !important;
}

.darkmode {
  display: none !important;
}

.shiki span[style*="#689f38"],
.shiki span[style*="#3949b2"],
.shiki span[style*="#00897b"] {
  font-style: italic !important;
  font-family: "Maple Mono", "Noto Serif CJK SC", monospace !important;
}

.explorer {
  font-weight: 400 !important;

  .folder-container div > a,
  .folder-container div > button span {
    font-size: 1rem !important;
  }

  ul.content li a {
    font-size: 0.95rem !important;
    font-weight: 500 !important;
  }
}

// ── Heading font & indicators ──────────────────────────────────────────────
article {
  h1, h2, h3, h4, h5, h6 {
    font-family: "Anthropic Serif", "Noto Serif CJK SC", serif;
    font-weight: 700;
    position: relative;
    padding-left: 0.65em;

    &::before {
      content: "";
      position: absolute;
      left: 0;
      top: 0.1em;
      width: 3px;
      height: 0.85em;
      border-radius: 2px;
    }
  }

  h1::before { background: linear-gradient(#dd2c38, #de7417); }
  h2::before { background: linear-gradient(#de7417, #c09c0c); }
  h3::before { background: linear-gradient(#c09c0c, #3da75c); }
  h4::before { background: linear-gradient(#3da75c, #2196b5); }
  h5::before { background: #2196b5; }
  h6::before { background: #7a43b5; }
}

// ── Alternative checkboxes ─────────────────────────────────────────────────
:root {
  --task-red:    rgb(221,  44,  56);
  --task-orange: rgb(222, 116,  23);
  --task-yellow: rgb(192, 156,  12);
  --task-green:  rgb( 29, 165,  29);
  --task-cyan:   rgb( 22, 166, 171);
  --task-blue:   rgb( 23, 117, 217);
  --task-purple: rgb(143,  71, 225);
  --task-pink:   rgb(221,  19, 153);
  --task-gray:   rgb(120, 120, 120);
}

li[data-task] {
  list-style: none !important;
  margin-left: -1.25em;

  &::before {
    content: "";
    display: inline-block;
    width: 1em;
    height: 1em;
    vertical-align: -0.13em;
    margin-right: 0.35em;
    background-color: currentColor;
    -webkit-mask-size: 100% 100%;
    -webkit-mask-repeat: no-repeat;
    mask-size: 100% 100%;
    mask-repeat: no-repeat;
  }
}

// [!] Important – orange
li[data-task="!"] {
  &::before {
    color: var(--task-orange);
    -webkit-mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='none' viewBox='0 0 16 16'%3e%3cpath fill='black' fill-rule='evenodd' d='M8 0a2.463 2.463 0 0 0-2.43 2.864v.002L6.686 9.55a1.334 1.334 0 0 0 2.63 0l1.114-6.685v-.002A2.463 2.463 0 0 0 8 0Zm0 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z' clip-rule='evenodd'/%3e%3c/svg%3e");
    mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='none' viewBox='0 0 16 16'%3e%3cpath fill='black' fill-rule='evenodd' d='M8 0a2.463 2.463 0 0 0-2.43 2.864v.002L6.686 9.55a1.334 1.334 0 0 0 2.63 0l1.114-6.685v-.002A2.463 2.463 0 0 0 8 0Zm0 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z' clip-rule='evenodd'/%3e%3c/svg%3e");
  }
}
// [?] Question – pink
li[data-task="?"] {
  &::before {
    color: var(--task-pink);
    -webkit-mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='none' viewBox='0 0 16 16'%3e%3cpath fill='black' d='M12.871 3.692c0 3.56-3.956 3.319-3.956 5.78v.014c0 .284-.23.514-.514.514H6.243a.514.514 0 0 1-.515-.514V9.34c0-3.803 3.473-3.56 3.473-5.341 0-.77-.571-1.23-1.517-1.23-.768 0-1.554.335-2.268 1.022a.512.512 0 0 1-.67.031l-1.419-1.11a.513.513 0 0 1-.056-.76C4.457.731 5.997 0 8.036 0c3.23 0 4.835 1.736 4.835 3.692ZM9.355 14c0 1.099-.88 2-2 2-1.1 0-2-.901-2-2s.9-2 2-2c1.12 0 2 .901 2 2Z'/%3e%3c/svg%3e");
    mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='none' viewBox='0 0 16 16'%3e%3cpath fill='black' d='M12.871 3.692c0 3.56-3.956 3.319-3.956 5.78v.014c0 .284-.23.514-.514.514H6.243a.514.514 0 0 1-.515-.514V9.34c0-3.803 3.473-3.56 3.473-5.341 0-.77-.571-1.23-1.517-1.23-.768 0-1.554.335-2.268 1.022a.512.512 0 0 1-.67.031l-1.419-1.11a.513.513 0 0 1-.056-.76C4.457.731 5.997 0 8.036 0c3.23 0 4.835 1.736 4.835 3.692ZM9.355 14c0 1.099-.88 2-2 2-1.1 0-2-.901-2-2s.9-2 2-2c1.12 0 2 .901 2 2Z'/%3e%3c/svg%3e");
  }
}
/* ... */

